----------------------------------------------------------------------
Wed Apr 24 22:27:51 2002                        Michael Jennings (mej)

Save buttonbar info when we save theme settings.
----------------------------------------------------------------------
Wed Apr 24 22:34:59 2002                        Michael Jennings (mej)

Fix warning.
----------------------------------------------------------------------
Fri Apr 26 14:28:08 2002                        Michael Jennings (mej)

Reverted Charles Clancy's shading patch (from the 21st) since it
breaks 24bpp on Linux.  Hopefully there is a better fix.

Fixed an ASSERT failure in the buttonbar redraw pointed out by
Laurence J. Lane <ljlane@debian.org>.

Also made multiple buttonbars work properly.
----------------------------------------------------------------------
Fri Apr 26 14:34:08 2002                        Michael Jennings (mej)

Minor tweak so bottom-docked buttonbars are properly placed.
----------------------------------------------------------------------
Sun Apr 28 10:06:32 2002                        Michael Jennings (mej)

Don't require the new libast just yet....
----------------------------------------------------------------------
Mon Apr 29 10:48:33 2002                        Michael Jennings (mej)

Disable the screen dump escape sequence and implement a save_buff()
script function instead.
----------------------------------------------------------------------
Mon Apr 29 21:18:20 2002                        Michael Jennings (mej)

Fixed the --install option which hasn't worked for ages.
----------------------------------------------------------------------
Sat May  4 10:23:38 2002                        Michael Jennings (mej)

Ran reformat-code on the tree.

Also merged in Azundris' Escreen patch.  It's disabled by default for
the moment pending further testing, but you can enable it manually by
defining ESCREEN.
----------------------------------------------------------------------