@@ -357,6 +357,16 @@ AC_ARG_WITH(pablo,
               AC_MSG_RESULT(no)
             fi], AC_MSG_RESULT(no)
 )
+AC_MSG_CHECKING(for Escreen support)
+AC_ARG_ENABLE(escreen,
+[  --enable-escreen        enable Eterm's built-in screen support], [
+            if test "$enableval" = "yes"; then 
+              AC_MSG_RESULT(yes)
+              AC_DEFINE(ESCREEN)
+            else
+              AC_MSG_RESULT(no)
+            fi], AC_MSG_RESULT(no)
+)
 AC_MSG_CHECKING(if profiling macros should be included)
 AC_ARG_ENABLE(profile,
 [  --enable-profile        compile with code profiling macros enabled], [
